--- a/rtcharts-swing/src/main/java/org/thingml/rtcharts/swing/AbstractGraphPanel.form
+++ b/rtcharts-swing/src/main/java/org/thingml/rtcharts/swing/AbstractGraphPanel.form
@@ -1,12 +1,9 @@
-<?xml version="1.1" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.5" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="40" green="40" id="darkGray" palette="1" red="40" type="palette"/>
-    </Property>
-    <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-      <Border info="null"/>
     </Property>
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[200, 100]"/>
@@ -29,24 +26,22 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="1" attributes="0">
+                  <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabelYMax" pref="595" max="32767" attributes="1"/>
-                          <Component id="jLabelYMin" alignment="0" pref="595" max="32767" attributes="1"/>
-                          <Group type="102" alignment="1" attributes="0">
-                              <Component id="jLabelTitle" pref="523" max="32767" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jLabelAVG" min="-2" pref="66" max="-2" attributes="0"/>
-                          </Group>
+                          <Component id="jLabelYMax" pref="534" max="32767" attributes="1"/>
+                          <Component id="jLabelYMin" alignment="0" pref="534" max="32767" attributes="1"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabelVMax" alignment="1" pref="106" max="32767" attributes="1"/>
-                          <Component id="jLabelVMin" alignment="1" pref="106" max="32767" attributes="1"/>
+                          <Component id="jLabelVMax" alignment="1" pref="46" max="32767" attributes="1"/>
+                          <Component id="jLabelVMin" alignment="1" max="32767" attributes="1"/>
                       </Group>
                   </Group>
-                  <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace pref="646" max="32767" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Component id="jLabelTitle" max="32767" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="jLabelAVG" min="-2" pref="70" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="jLabelValue" min="-2" pref="61" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -56,7 +51,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" max="-2" attributes="0">
+          <Group type="102" attributes="0">
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabelTitle" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabelValue" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -67,7 +62,7 @@
                   <Component id="jLabelYMax" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabelVMax" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="502" max="32767" attributes="0"/>
+              <EmptySpace pref="408" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabelVMin" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabelYMin" alignment="3" min="-2" max="-2" attributes="0"/>
