Added support for scaling of text in rtcharts The data is unscaled integer but the text info can be float

--- a/rtcharts-swing/src/main/java/org/thingml/rtcharts/swing/AbstractGraphPanel.form
+++ b/rtcharts-swing/src/main/java/org/thingml/rtcharts/swing/AbstractGraphPanel.form
@@ -79,8 +79,8 @@
                       <Component id="jLabelTitle" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jLabelAVG" min="-2" pref="70" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jLabelValue" min="-2" pref="61" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="jLabelValue" min="-2" pref="78" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
