Added auto scale functionality

--- a/rtcharts-swing/src/main/java/org/thingml/rtcharts/swing/AbstractGraphPanel.form
+++ b/rtcharts-swing/src/main/java/org/thingml/rtcharts/swing/AbstractGraphPanel.form
@@ -32,6 +32,22 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemColorActionPerformed"/>
           </Events>
         </MenuItem>
+        <MenuItem class="javax.swing.JMenuItem" name="jMenuItemAutoScale">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Auto scale"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemAutoScaleActionPerformed"/>
+          </Events>
+        </MenuItem>
+        <MenuItem class="javax.swing.JMenuItem" name="jMenuItemFit">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Fit to content"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemFitActionPerformed"/>
+          </Events>
+        </MenuItem>
       </SubComponents>
     </Container>
   </NonVisualComponents>
